# CUIFramework

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml  release.yml
core/: CMakeLists.txt
core/include/: stb_truetype.h
core/include/cui/: app.h  cui.h  hot_reload.h  input.h  layout_types.h  renderer.h  style.h  window.h
core/include/glad/: glad.h
core/src/: app.cpp  glad.c  hot_reload.cpp  input.cpp  renderer.cpp  window.cpp
examples/basic/: CMakeLists.txt  basic.cpp
examples/hotreload/: CMakeLists.txt  hotreload.cpp
guest/: CMakeLists.txt
guest/include/cui/guest/: api.h
guest/src/: api.cpp  ui_main.cpp
scripts/: build-and-run.bat  build.bat  build.sh  clean.bat  setup-unix.sh  setup-windows.bat
ui/: CMakeLists.txt
ui/include/cui/ui/: builder.h  components.h  layout.h
ui/src/: builder.cpp  components.cpp  layout.cpp
